Set margin-top to 32px to ensure 32px space between items in header and gap to 52px to ensure 52px space between children in items

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  /* border: 5px solid orange; */
 }
 
 /* do not edit this footer */
@@ -30,9 +31,13 @@ img {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  /* border: 5px solid orange; */
 }
 
 .items {
   display: flex;
-  
+  /* border: 5px solid orange; */
+  margin-top: 32px;
+  gap: 52px;
+
 }
